Hiding socials on mobile until I can update viewport issues.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -514,7 +514,8 @@ button[aria-label="Unzoom image"] {
     }
 
     .socials {
-        height:22vh !important;
+        // height:22vh !important;
+        display:none !important;
     }
 
 }
